<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context=".Auth.LogIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/resource_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/blanco"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_inicio_sesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <EditText
            android:id="@+id/Getcorreo"
            android:layout_width="365dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/custom_input_text"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/background_resource"
            android:textColorHint="@color/gris"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/Getcontra"
            android:layout_width="365dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/contra"
            android:textColorHint="@color/gris"
            android:drawableStart="@drawable/ic_password"
            android:background="@drawable/custom_input_text"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="19sp"
            android:textColor="@color/background_resource"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Getcorreo"
            tools:ignore="Autofill"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Getcontra">

            <Button
                android:id="@+id/Btn_iniciar_sesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/verde"
                android:drawableStart="@drawable/ic_user_login"
                android:paddingStart="12dp"
                android:paddingEnd="10dp"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/blanco"
                android:textSize="13sp" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/Btn_crear_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/background_resource"
                android:drawableStart="@drawable/ic_user_add"
                android:paddingStart="12dp"
                android:paddingEnd="10dp"
                android:text="@string/crear_usuario"
                android:textColor="@color/blanco"
                android:textSize="13sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>