<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Dashboard.DashBoardActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/background_resource_dashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texto_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/blanco"
            android:textSize="30sp"
            />



        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/texto_dash"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="80dp"
            >

<!--     Primera columna       -->
            <androidx.cardview.widget.CardView
                android:id="@+id/View_crear_cita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_agregar_cita_dental"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agregar_cita"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/negro"
                        android:textAlignment="center"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
<!--    segunda columna        -->

            <androidx.cardview.widget.CardView
                android:id="@+id/View_control_cita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_control_citas_existentes"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/control_citas"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/negro"
                        android:textAlignment="center"
                        />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/View_lista_medicamentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_servicios_clinica"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/servicios_de_la_clinica"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:textColor="@color/negro"
                        android:textAlignment="center"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/View_servicios_medicos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_lista_medicos"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lista_medicos"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/negro"
                        android:textAlignment="center"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/View_lista_medicos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_lista_medicamentos"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lista_medicamentos"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/negro"
                        android:textAlignment="center"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/View_contactos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_contact"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contactos"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/negro"
                        android:textAlignment="center"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
